--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
-      <head><title>This domains are for rent or cooperate，please contact jethsing@gmail.com</title></head>
+      <head><title>人工智能咨询学会</title></head>
       <body>
-        Hello World
+        This domains are for rent or cooperate，please contact jethsing@gmail.com
       </body>
 </html>
