--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
       <head><title>人工智能咨询学会</title></head>
       <body>
-        This domains are for rent or cooperate，please contact jethsing@gmail.com
+        consulting association by artificial intelligence
       </body>
 </html>
