--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
-      <head><title>人工智能咨询学会</title></head>
+      <head><title>consulting association in artificial intelligence</title></head>
       <body>
-        consulting association in artificial intelligence
+        :)
       </body>
 </html>
