--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <html>
-      <head><title>consulting association in artificial intelligence</title></head>
+      <head><title>xingjingyuan</title></head>
       <body>
         :)
       </body>
