--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>404 page not found - Jane - A super concise theme for Hugo</title>
+    <title>404 page not found - xingjingyuan</title>
     
 
 <meta name="renderer" content="webkit" />
@@ -26,7 +26,7 @@
 
 <meta name="mobile-web-app-capable" content="yes">
 
-<meta name="author" content="xianmin" />
+<meta name="author" content="xing" />
   <meta name="description" content="Hugo theme jane example site." />
   <meta name="keywords" content="Hugo, theme, jane" />
 
@@ -405,7 +405,7 @@
 
       </i>
     </span><span class="author">
-        xianmin
+        xingjingyuan
         
       </span></span>
 
