--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     
 
     <div class="post-meta-category">
-        <a href="http://xingjingyuan.github.io/categories/index/"> index </a>
+        <a href="http://xingjingyuan.github.io/categories/%E5%88%86%E7%B1%BB1/"> 分类1 </a>
           
       </div>
 
