--- a/about/index.html
+++ b/about/index.html
@@ -520,7 +520,7 @@
 
       </i>
     </span><span class="author">
-        xingjingyuan
+        xingjingyuan@petalmail.com
         
       </span></span>
 
