--- a/404.html
+++ b/404.html
@@ -405,7 +405,7 @@
 
       </i>
     </span><span class="author">
-        xingjingyuan
+        xingjingyuan@petalmail.com
         
       </span></span>
 
