--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
       </i>
     </span><span class="author">
-        xingjingyuan
+        xingjingyuan@petalmail.com
         
       </span></span>
 
