--- a/about/index.html
+++ b/about/index.html
@@ -349,7 +349,7 @@
 <p>规划先行 市场主导 适度超前 以战代练</p>
 <p>关注领域：海外基础设施投建营、科技+、能源+、军工+、品牌+、文教+、舆论+</p>
 <p>其他平台：国内：<a href="https://www.weibo.com/u/2553697943">微博</a>、<a href="https://v.douyin.com/UqFg6Mk">抖音</a>、<a href="https://www.xiaohongshu.com/user/profile/614007bd000000001f03b4ba">小红书</a>、<a href="https://www.kuaishou.com/profile/3x4jw7fnpezea54">快手</a>、<a href="https://space.bilibili.com/1677415310">bilibili</a>、<a href="https://www.zhihu.com/people/xingjingyuan">知乎</a></p>
-<p>国外：<a href="https://youtube.com/@xingjingyuan">google youtube</a>、<a href="https://twitter.com/xingjingyuan">twitter</a>、<a href="https://facebook.com/xingjingyuan">facebook</a>、<a href="https://github.com/xingjingyuan/">github</a>、<a href="https://t.me/xingjingyuan">telegram</a>、<a href="https://vk.com/">VKontakte</a></p>
+<p>国外：<a href="https://youtube.com/@xingjingyuan">google youtube</a>、<a href="https://twitter.com/xingjingyuan">twitter</a>、<a href="https://facebook.com/xingjingyuan">facebook</a>、<a href="https://github.com/xingjingyuan/">github</a>、<a href="https://t.me/xingjingyuan">telegram</a>、<a href="https://vk.com/xingjingyuan">VKontakte</a></p>
 <p>做精英，精英的流动性理论，精神贵族，绿色低碳环保。</p>
 <p>京剧：连升三级、武家坡、打龙袍、穆桂英挂帅、锁麟囊、卖水、女驸马、霸王别姬、空城计、四郎探母、红娘、三家店、杜鹃山、沙家浜</p>
 <p>音乐：向天再借五百年、我站立的地方是中国、最后的倾诉、等待、鸿雁、假行僧、蓝莲花、曾经的你、可可托海的牧羊人、卓玛、贝加尔湖畔、假如爱有天意、我们的时光、想把我唱给你听、前门情思大碗茶、私奔、沧海一声笑、红塔山下阿诗玛、弥渡山歌、真心英雄、鬼迷心窍、童年、现代爱情故事</p>
